firmware/lib/control-table/tests/ui/table_field_unknown_ct_region_key.stderr
error: unknown ct_region key (expected addr_mod)
  --> tests/ui/table_field_unknown_ct_region_key.rs:33:17
   |
33 |     #[ct_region(nope = 1)]
   |                 ^^^^
